<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/startOrEndLocationTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <Button
        android:id="@+id/StartOrEndButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now"
        app:layout_constraintBottom_toBottomOf="@+id/startOrEndLocationTracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startOrEndLocationTracking"
        app:layout_constraintTop_toTopOf="@+id/startOrEndLocationTracking" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/showLatitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/showLatitude"
        app:layout_constraintTop_toTopOf="@+id/showLatitude" />

    <TextView
        android:id="@+id/ShowLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_longitude"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startOrEndLocationTracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showLatitude"
        app:layout_constraintVertical_bias="0.215" />

    <TextView
        android:id="@+id/showLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_latitude"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startOrEndLocationTracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565" />

    <TextView
        android:id="@+id/ShowAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_accuracy"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/startOrEndLocationTracking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ShowLongitude"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/ShowLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ShowLongitude"
        app:layout_constraintTop_toTopOf="@+id/ShowLongitude" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/ShowAccuracy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ShowAccuracy"
        app:layout_constraintTop_toTopOf="@+id/ShowAccuracy" />




        <Button
            android:id="@+id/setHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setHome"
            app:layout_constraintBottom_toTopOf="@+id/StartOrEndButton"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ShowAccuracy" />


        <TextView
            android:id="@+id/HomeLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeLoc"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/showLatitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/displayHomeLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/Latitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HomeLoc"
            app:layout_constraintVertical_bias="0.153" />
</androidx.constraintlayout.widget.ConstraintLayout>